--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ osx_image: xcode9.2
 branches:
   only:
     - master
+directories:
+    - $HOME/.cocoapods/
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
@@ -16,9 +18,12 @@ env:
     - DESTINATION="OS=8.4,name=iPhone 4S"          SCHEME="$IOS_FRAMEWORK_SCHEME"
 before_install:
   - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+install:
+  - gem install bundler
+  - bundle install --jobs=3 --retry=3 --deployment --without distribution
+  - bundle exec pod repo update
 script:
   - set -o pipefail
-  - pod update
   - xcodebuild -version
   - xcodebuild -showsdks
   - xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
