--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   - WORKSPACE=goSellSDK.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="goSellSDK_Carthage"
+  - IOS_FRAMEWORK_SCHEME="goSellSDK"
   matrix:
     - DESTINATION="OS=11.2,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"
