--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - gem install bundler
   - bundle install --jobs=3 --retry=3 --deployment --without distribution
   - bundle exec pod repo update
+  - bundle exec pod update
 script:
   - set -o pipefail
   - xcodebuild -version
