--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ fastlane/screenshots
 fastlane/test_output
 Pods
 goSellSDK.xcodeproj/xcshareddata
+Example
+goSellSDK/API
+goSellSDK/goSellSDK.swift
