--- a/Example/goSellSDKExample/Info.plist
+++ b/Example/goSellSDKExample/Info.plist
@@ -42,5 +42,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This application uses Camera to scan credit cards</string>
 </dict>
 </plist>
