Added BIN API, updated documentation

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ fastlane/screenshots
 fastlane/test_output
 Pods
 goSellSDK.png
+docs/docsets/goSellSDK.docset/Contents/Resources/Documents/undocumented.json
+docs/undocumented.json
