--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ platform :ios, '8.0'
 use_frameworks!
 
 source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/Tap-Payments/PodSpecs.git'
 
 target 'goSellSDKExample' do
     
