Fixed address display & country selection logic

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ fastlane/test_output
 Pods
 goSellSDK.png
 Carthage
+docs/docsets/goSellSDK.docset/Contents/Resources/Documents/undocumented.json
+docs/undocumented.json
