--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ goSellSDK.png
 Carthage
 docs/docsets/goSellSDK.docset/Contents/Resources/Documents/undocumented.json
 docs/undocumented.json
+.DS_Store
