--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - WORKSPACE=goSellSDK.xcworkspace
   - IOS_FRAMEWORK_SCHEME="goSellSDK"
   matrix:
-	- DESTINATION="OS=12.1,name=iPhone XR"         SCHEME="$IOS_FRAMEWORK_SCHEME"
+	- DESTINATION="OS=12.1,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"
     - DESTINATION="OS=11.3,name=iPhone X"          SCHEME="$IOS_FRAMEWORK_SCHEME"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"   SCHEME="$IOS_FRAMEWORK_SCHEME"
     - DESTINATION="OS=9.3,name=iPhone 6"           SCHEME="$IOS_FRAMEWORK_SCHEME"
