--- a/Example/goSellSDKExample/Supporting Files/Info.plist
+++ b/Example/goSellSDKExample/Supporting Files/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.8-beta</string>
+	<string>2.2.8-beta2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>Fabric</key>
