1- Setting the apple pay merchant id to merchant.tap.gosell

--- a/Example/goSellSDKExample/goSellSDKExample.entitlements
+++ b/Example/goSellSDKExample/goSellSDKExample.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
 		<string>merchant.tap.ApplePayTemplate</string>
+		<string>merchant.tap.gosell</string>
 	</array>
 </dict>
 </plist>
