Added camera usage info to plist

--- a/Example/GoSellAppClip/Info.plist
+++ b/Example/GoSellAppClip/Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAppClipRequestLocationConfirmation</key>
 		<false/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This application uses Camera to scan credit cards</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
