--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,7 +9,7 @@ target 'goSellSDKExample' do
     pod 'Fabric'
     
     pod 'goSellSDK', :path => '../'
-	pod 'goSellSDK/ErrorReporting', :path => '../'
+#	pod 'goSellSDK/ErrorReporting', :path => '../'
 
 end
 
